271: Unit names almost always null
Task-Url: https://github.com/unitsofmeasurement/indriya/issues/271